<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

<!--    <item
        android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_action_upload_inactive"
        android:showAsAction="ifRoom"></item>-->

    <item android:id="@+id/action_add_buddy"
        android:title="@string/action_add_buddy"
        android:icon="@drawable/ic_action_add_buddy"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        android:orderInCategory="102"
        android:showAsAction="never" />
</menu>
