<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_logo"
        android:scaleType="centerInside"
        android:src="@drawable/ic_login_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="@string/login_text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/login_edit_username"
                android:digits="0123456789_.abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/login_text_password"
                android:digits="0123456789_.abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/login_edit_password"
                android:password="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>
        <LinearLayout
            android:id="@+id/login_status_layout"
            android:visibility="gone"
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/login_progressbar"
                style="@android:style/Widget.Holo.ProgressBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/login_status_text"
                android:text="@string/action_login_start"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:gravity="center"
            android:id="@+id/login_button"
            android:text="@string/action_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <TextView
        android:id="@+id/regjid"
        android:layout_gravity="right"
        android:autoLink="all"
        android:text="@string/action_register_jid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>